# bids-rs

./: .gitignore  CITATION.bib  CITATION.cff  Cargo.toml  README.md  SPEC_PARITY.md  UPDATING_BIDS_VERSION.md  clippy.toml  publish.sh
.cargo/: config.toml
.github/workflows/: ci.yml  parity-check.yml
benchmarks/: benchmark_results.json
crates/bids/: Cargo.toml  README.md
crates/bids-beh/: Cargo.toml
crates/bids-beh/src/: lib.rs
crates/bids-cli/: Cargo.toml
crates/bids-cli/src/: main.rs
crates/bids-cli/src/cmd/: dataset.rs  eeg.rs  entities.rs  info.rs  layout.rs  ls.rs  mod.rs  model.rs  report.rs  upgrade.rs
crates/bids-core/: Cargo.toml
crates/bids-core/src/: config.rs  dataset_description.rs  entities.rs  error.rs  file.rs  genetic.rs  hed.rs  lib.rs  metadata.rs  padded_int.rs  timeseries.rs  utils.rs
crates/bids-dataset/: Cargo.toml
crates/bids-dataset/src/: aggregate.rs  benchmark.rs  cache.rs  evaluation.rs  filter.rs  http.rs  lib.rs  ml.rs  openneuro.rs  paradigm.rs  ratelimit.rs  split.rs
crates/bids-dataset/tests/: live_openneuro.rs
crates/bids-derive/: Cargo.toml
crates/bids-derive/src/: lib.rs
crates/bids-e2e-tests/: Cargo.toml
crates/bids-e2e-tests/src/: fixtures.rs  lib.rs  precision.rs
crates/bids-e2e-tests/tests/: bids_examples.rs  round_trip.rs
crates/bids-eeg/: Cargo.toml
crates/bids-eeg/examples/: bench_read.rs  bench_vs_python.rs  perf_trace.rs
crates/bids-eeg/src/: channels.rs  coordsystem.rs  csp.rs  data.rs  eeg_layout.rs  electrodes.rs  events.rs  harmonize.rs  lib.rs  metadata.rs  pipeline.rs
crates/bids-eeg/tests/: bench_regression.rs
crates/bids-filter/: Cargo.toml
crates/bids-filter/src/: lib.rs
crates/bids-formula/: Cargo.toml
crates/bids-formula/src/: lib.rs
crates/bids-ieeg/: Cargo.toml
crates/bids-ieeg/src/: layout.rs  lib.rs  metadata.rs
crates/bids-inflect/: Cargo.toml
crates/bids-inflect/src/: lib.rs
crates/bids-io/: Cargo.toml
crates/bids-io/src/: gradient.rs  json.rs  lib.rs  path_builder.rs  tsv.rs  writer.rs
crates/bids-layout/: Cargo.toml
crates/bids-layout/src/: db.rs  get_builder.rs  indexer.rs  layout.rs  lib.rs  query.rs
crates/bids-meg/: Cargo.toml
crates/bids-meg/src/: ctf.rs  data.rs  headshape.rs  lib.rs  metadata.rs
crates/bids-micr/: Cargo.toml
crates/bids-micr/src/: data.rs  lib.rs  ome.rs
crates/bids-modeling/: Cargo.toml
crates/bids-modeling/src/: auto_model.rs  graph.rs  hrf.rs  lib.rs  node.rs  spec.rs  transformations.rs
crates/bids-motion/: Cargo.toml
crates/bids-motion/src/: lib.rs
crates/bids-mrs/: Cargo.toml
crates/bids-mrs/src/: lib.rs
crates/bids-nifti/: Cargo.toml
crates/bids-nifti/src/: cifti.rs  gifti.rs  lib.rs  mmap.rs  qmri.rs
crates/bids-nirs/: Cargo.toml
crates/bids-nirs/src/: data.rs  lib.rs
crates/bids-perf/: Cargo.toml
crates/bids-perf/src/: lib.rs
crates/bids-pet/: Cargo.toml
crates/bids-pet/src/: lib.rs  metadata.rs
crates/bids-reports/: Cargo.toml
crates/bids-reports/src/: lib.rs  parameters.rs  parsing.rs  report.rs
crates/bids-schema/: Cargo.toml
crates/bids-schema/src/: lib.rs  version.rs
crates/bids-validate/: Cargo.toml
crates/bids-validate/src/: lib.rs
crates/bids-variables/: Cargo.toml
crates/bids-variables/src/: collections.rs  io.rs  lib.rs  node.rs  variables.rs
crates/bids/src/: lib.rs
crates/pybids-rs/: Cargo.toml
crates/pybids-rs/src/: lib.rs
tests/: bench_eeg_read.py  benchmark_all.py  detect_changes.py  generate_golden.py  precision_test.py  run_benchmarks.py
tests/golden/: benchmark_results.json  eeg_read_benchmark.json  golden.json  known_pybids_api.json  precision.json
