[package]
name = "bids-dataset"
description = "Download, filter, match, and aggregate BIDS datasets from OpenNeuro for ML pipelines"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
## Enable Apache Arrow + Parquet export for manifests.
arrow = ["dep:arrow", "dep:arrow-schema", "dep:arrow-csv", "dep:parquet"]

[dependencies]
bids-core = { workspace = true }
bids-layout = { workspace = true }
bids-io = { workspace = true }
bids-schema = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ureq = { workspace = true }
sha2 = { workspace = true }
flate2 = { workspace = true }
arrow = { workspace = true, optional = true }
arrow-schema = { workspace = true, optional = true }
arrow-csv = { workspace = true, optional = true }
parquet = { workspace = true, optional = true }
