[package]
name = "bids-ieeg"
description = "BIDS ieeg domain support"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bids-core = { workspace = true }
bids-io = { workspace = true }
bids-layout = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bids-eeg = { workspace = true }

