[package]
name = "bids-meg"
description = "BIDS MEG domain support — metadata, channels, events; optional FIFF data reading"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
## Enable FIFF (Functional Imaging File Format) data reading for Elekta/Neuromag MEG.
## Adds the `fiff` crate dependency.
fiff = ["dep:fiff"]

[dependencies]
bids-core = { workspace = true }
bids-io = { workspace = true }
bids-layout = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bids-eeg = { workspace = true }
fiff = { workspace = true, optional = true }

