[package]
name = "bids-modeling"
description = "BIDS Statistical Models: graph, transformations, HRF, design matrices"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bids-core = { workspace = true }
bids-variables = { workspace = true }
bids-layout = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
