[package]
name = "bids-nifti"
description = "NIfTI-1/NIfTI-2 reader for BIDS — headers, voxel data, volume extraction, scaling, gzip support"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
## Enable ndarray integration for NiftiImage → ArrayD<f64> conversion.
ndarray = ["dep:ndarray"]
## Enable true memory-mapped I/O via memmap2 (zero-copy, OS page cache).
mmap = ["dep:memmap2"]
## Enable safetensors export for ML frameworks.
safetensors = ["dep:safetensors"]

[dependencies]
bids-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
flate2 = { workspace = true }
thiserror = { workspace = true }
bytemuck = { workspace = true }
ndarray = { workspace = true, optional = true }
memmap2 = { workspace = true, optional = true }
safetensors = { workspace = true, optional = true }
