[package]
name = "bids-reports"
description = "Auto-generate publication-quality data acquisition methods sections from BIDS datasets"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bids-core = { workspace = true }
bids-layout = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
