[package]
name = "bids-variables"
description = "BIDS variables: events, physio, stim, participants, sessions, scans"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bids-core = { workspace = true }
bids-io = { workspace = true }
bids-layout = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
